<resources>
    <string name="app_name">BoutiqueApp</string>
    <string name="add_fav_msg">Added to favorites…</string>
    <string name="remove_fav_msg">Removed from favorites…</string>
    <string name="favorite_count">☆ %1$d people favorites it ☆</string>
    <string name="favorite_count_0">☆ Be the first one to favorite it ☆</string>
    <string name="product_no">Product No: %1$d</string>
    <string name="share_image">Preparing high quality image to share…</string>
    <string name="similar_products">Similar products in %1$s</string>
    <string name="related_products">Complete your looks</string>
    <string name="email">E-mail</string>
    <string name="email_error_msg">Enter a valid e-mail</string>
    <string name="login_error_msg">Please enter your e-mail and password</string>
    <string name="cancel">Cancel</string>
    <string name="enter_valid_information">Enter Valid Information</string>
    <string name="please_login">Please Login</string>
    <string name="user_name">Name</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Log out</string>
    <string name="mob_no">Mobile Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date of Birth</string>
    <string name="anniversary">Anniversary</string>
    <string name="wait">Please wait</string>
    <string name="url" translatable="false">http://tiquesinn.com/</string>
    <!--<string name="url" translatable="false">http://jdadmin-001-site2.itempurl.com/</string>-->
    <!--<string name="url" translatable="false">http://192.168.1.107:222/</string>-->
    <string name="ok_button">OK</string>
    <string name="network_off_alert">Please turn on internet</string>
    <string name="since">Since : %1$s</string>
    <string name="mob_no_error">Enter valid mobile number</string>
    <string name="name_error">Enter a valid name</string>
    <string name="email_error">Enter valid e-mail</string>
    <string name="gender_error_msg">Please select gender</string>
    <string name="enter_otp">Please enter the four digit number you got through sms</string>
    <string name="rs">₹ : %1$s</string>
    <string name="activate_account_q">Your account is Locked. Contact boutique.</string>
    <string name="my_favorites">✩ My Favorites</string>
    <string name="exit_q">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="designer_name">Designer : %1$s</string>
    <string name="share_text">Share the app to get points. Enter your loyalty card number while their registration to get points.</string>
    <string name="share_text_detail">https://play.google.com/store/apps/details?id=com.android.example&#13; Checkout this app and use %1$s referral number while registration. You will get loyalty points which can be used to redeem on purchase at %2$s.</string>
    <string name="share_text_sub">See this app of %1$s for new styles</string>
    <string name="referral_loyalty">Referral Loyalty Card Number (Optional)</string>
    <string name="no_items">No items to display</string>
    <string name="no_reviews">Be the first one to review this product</string>
    <string name="favorites">Favorites</string>
    <string name="view_on_map">View on Map</string>
    <string name="my_orders">My Orders</string>
    <string name="order_date">Ordered on</string>
    <string name="delivery_date">Delivery on</string>
    <string name="delivered_date">Delivered on</string>
    <string name="ready_date">Ready on</string>
    <string name="last_updated">Updated on</string>
    <string name="order_placed">Order is placed</string>
    <string name="your_order_is_ready">Order is Ready</string>
    <string name="item_delivered">Item delivered</string>
    <string name="products">Products</string>
    <string name="loading">Loading…</string>
    <string name="write_a_review">Write a review</string>
    <string name="submit">Submit</string>
    <string name="delete_review_q">Do you want to delete this review?</string>
    <string name="my_orders_sidebar">≡ My Orders</string>
    <string name="trending">⏫ Trending</string>
    <string name="trending_products">Trending Products</string>
    <string name="new_message">"You have a new message"</string>
    <string name="msg_notification">You have new messages</string>
    <string name="splash_title">Boutique App</string>
    <string name="splash_tagline">- Meet the styles -</string>
    <string name="your_loyalty_card_number_is">Your loyalty card number is</string>
    <string name="out_of_Stock">Out of Stock</string>
    <string name="in_stock">In Stock</string>
    <string name="view_your_order_status">View your order status</string>
    <string name="search_results">Search Results</string>
    <string name="view_all">View all</string>
</resources>
