<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tech.thrithvam.boutiqueapp.User"
    android:background="@color/background">
    <!--===================================== User login screen=============================================-->
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:padding="50dp"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/imageView"
            android:src="@drawable/dp"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/email"
            android:id="@+id/nameText"
            android:layout_below="@+id/imageView"
            android:textColor="#000000" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailLogin"
            android:layout_below="@+id/nameText"
            android:layout_alignLeft="@+id/nameText"
            android:layout_alignStart="@+id/nameText"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:maxLength="40"
            android:layout_alignRight="@+id/nameText"
            android:layout_alignEnd="@+id/nameText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/password"
            android:id="@+id/passText"
            android:layout_below="@+id/emailLogin"
            android:layout_alignLeft="@+id/emailLogin"
            android:layout_alignStart="@+id/emailLogin"
            android:textColor="#000000" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordLogin"
            android:layout_below="@+id/passText"
            android:layout_alignLeft="@+id/passText"
            android:layout_alignStart="@+id/passText"
            android:layout_alignRight="@+id/emailLogin"
            android:layout_alignEnd="@+id/emailLogin"
            android:maxLength="20"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login"
            android:layout_below="@+id/passwordLogin"
            android:layout_alignRight="@+id/passwordLogin"
            android:layout_alignEnd="@+id/passwordLogin"
            android:background="@color/accent"
            android:textColor="@android:color/white"
            android:onClick="login"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/sign_up"
            android:layout_alignLeft="@+id/passwordLogin"
            android:layout_alignStart="@+id/passwordLogin"
            android:background="@color/accent"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:onClick="sign_up"/>

    </RelativeLayout>
</ScrollView>
    <!--================================== User registration screen=========================================-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/SignUp"
        android:background="@drawable/bg"
        android:visibility="gone">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/user_name"
                android:id="@+id/textView3"
                android:textColor="@color/secondary_text"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/user_name_signup"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:maxLength="30"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/password"
                android:textColor="@color/secondary_text"
                android:id="@+id/textView4"
                android:layout_below="@+id/user_name_signup"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password1_signup"
                android:layout_below="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:maxLength="20"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/password_again"
                android:textColor="@color/secondary_text"
                android:id="@+id/textView5"
                android:layout_below="@+id/password1_signup" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password2_signup"
                android:layout_below="@+id/textView5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mob_no"
                android:id="@+id/textView6"
                android:layout_below="@+id/password2_signup"
                android:textColor="@color/secondary_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/mob_no_signup"
                android:layout_below="@+id/textView6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:maxLength="20"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email"
                android:id="@+id/textView7"
                android:textColor="@color/secondary_text"
                android:layout_below="@+id/mob_no_signup" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email_signup"
                android:layout_below="@+id/textView7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:maxLength="40"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dob"
                android:id="@+id/textView8"
                android:textColor="@color/secondary_text"
                android:layout_below="@+id/email_signup" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pick_a_date"
                android:id="@+id/dob_signup"
                android:textColor="@color/accent"
                android:layout_below="@+id/textView8"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/anniversary"
                android:id="@+id/textView9"
                android:textColor="@color/secondary_text"
                android:layout_below="@+id/dob_signup" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pick_a_date"
                android:id="@+id/anniversary_signup"
                android:textColor="@color/accent"
                android:layout_below="@+id/textView9"
                android:layout_centerHorizontal="true"/>
            <RadioGroup
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/anniversary_signup"
                android:id="@+id/gender"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/male"
                    android:layout_weight="1" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:id="@+id/female"
                    android:layout_weight="1" />
            </RadioGroup>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/button2"
                android:layout_below="@+id/gender"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="sign_up_filled"
                android:background="@color/accent"
                android:textColor="@android:color/white"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/button1"
                android:layout_below="@+id/gender"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="sign_up_cancel"
                android:background="@color/divider"
                android:textColor="@android:color/white"/>

        </RelativeLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</RelativeLayout>
