<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="4dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="OrderDescription"
        android:id="@+id/description"
        android:layout_toLeftOf="@+id/orderNo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/primary_text"
        android:maxLines="1"
        android:ellipsize="end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="OrderNo"
        android:id="@+id/orderNo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/secondary_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Amount"
        android:id="@+id/amount"
        android:layout_below="@+id/expectedDeliveryDate"
        android:textColor="@color/primary_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/order_date"
        android:id="@+id/orderDateLabel"
        android:textColor="@color/secondary_text"
        android:layout_below="@+id/description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Date"
        android:id="@+id/orderDate"
        android:textColor="@color/primary_text"
        android:layout_below="@+id/orderDateLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/delivery_date"
        android:id="@+id/readyDateLabel"
        android:textColor="@color/secondary_text"
        android:layout_below="@+id/description"
        android:layout_alignRight="@+id/orderNo"
        android:layout_alignEnd="@+id/orderNo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Date"
        android:id="@+id/expectedDeliveryDate"
        android:textColor="@color/primary_text"
        android:layout_below="@+id/readyDateLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="10sp"
        android:text="@string/last_updated"
        android:id="@+id/lastUpdatedDateLabel"
        android:textColor="@color/secondary_text"
        android:layout_alignBottom="@+id/orderStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:paddingLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="10sp"
        android:text="Date"
        android:id="@+id/lastUpdatedDate"
        android:textColor="@color/secondary_text"
        android:layout_alignBottom="@+id/lastUpdatedDateLabel"
        android:layout_toRightOf="@+id/lastUpdatedDateLabel"
        android:layout_toEndOf="@+id/lastUpdatedDateLabel" />
    <TextView
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/order_placed"
        android:id="@+id/orderStatus"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:layout_below="@+id/amount"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>