<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.thrithvam.boutiqueapp.Home"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homeScroll">
        <LinearLayout

            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:id="@+id/homeScreen"
            >
   <!-- <TextView
        android:paddingLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="New Arrivals !!!"
        android:id="@+id/new_arrivals_label"
        android:textColor="#ffffffff"
        android:layout_above="@+id/newArrivalCard"
        android:background="@color/whiteBackground"
        android:layout_alignRight="@+id/newArrivalCard"
        android:layout_alignEnd="@+id/newArrivalCard"
        android:layout_alignLeft="@+id/newArrivalCard"
        android:layout_alignStart="@+id/newArrivalCard" />-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"

        android:id="@+id/newArrivalCard"
        android:background="@color/whiteBackground"
        android:orientation="vertical"
        >
        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/newArrivals"
            android:layout_width="match_parent"
            android:layout_height="300dp"

            />

        <SearchView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchView"
            android:queryHint="Search"
            android:background="#9dffffff"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:maxWidth="10000dp"
            />

    </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/whiteBackground"
                android:baselineAligned="false">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/offer"
                    android:scaleType="fitXY"
                    android:id="@+id/offer"/>
</LinearLayout>



        </LinearLayout>
</com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
    </FrameLayout>
    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:drawable/dialog_holo_light_frame">
        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:divider="@color/divider"
            android:dividerHeight="0.5dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider"
            android:layout_below="@id/left_drawer"
            />
        <TextView
            android:id="@+id/favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:paddingTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="@string/my_favorites"
            android:layout_below="@id/left_drawer"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:id="@+id/ordersSideBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:paddingTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="@string/my_orders_sidebar"
            android:layout_below="@id/favorites"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:id="@+id/trending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:paddingTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="@string/trending"
            android:layout_below="@id/ordersSideBar"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
